mealie/mealie-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
spec:
  type: NodePort
  selector:
    app: mealie
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      nodePort: 32000  # You can choose any port between 30000–32767
